fix jumping pages

--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,7 @@ body {
 	color: var(--color-text-primary) !important;
 	
 	font-family: var(--font-family) !important;
+	overflow-y:scroll;
 }
 
 .container {
